<resources>
    <string name="app_name">MiniATM</string>
    <string name="register">Daftar</string>
    <string name="version">Version 1.0</string>
    <string name="copyright">\u00a9 2016</string>
    <string name="print">Cetak</string>

    <string name="balance">Cek Saldo</string>
    <string name="purchase">Pembelian</string>
    <string name="payment">Pembayaran</string>
    <string name="tranfer">Transfer</string>
    <string name="function">Function</string>
    <string name="about">About</string>
    <string name="account">Pembukaan Rekening</string>
    <string name="cash">Tarik Tunai</string>
    <string name="register_merchant">Pendaftaran Merchant</string>

    <!--purchase-->
    <string name="phone_credit">Pulsa Handphone</string>
    <string name="electric_token">Token Listrik</string>
    <!--payment-->
    <string name="credit_card">Kartu Kredit</string>
    <string name="post_paid_phone">PSTN / Pasca Bayar</string>
    <string name="electric">PLN</string>
    <string name="water">PDAM</string>
    <string name="insurance">Asuransi</string>
    <string name="television">TV Berlangganan</string>
    <string name="bpjs">BPJS KESEHATAN</string>
    <string name="internet">Internet</string>
    <!--transfer-->
    <string name="interbank">Sesama Bank</string>
    <string name="fellow_bank">Antar Bank</string>
    <string name="settings">Pengaturan</string>
    <string name="login">Masuk</string>

    <!--function-->
    <string name="function_void">Void</string>
    <string name="function_settelment">Settelment</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_of_customers">Tipe Nasabah</string>
    <string name="type_of_products">Jenis Produk</string>
    <string name="type_of_account">Jenis Rekening</string>
    <string name="account_">Rekening</string>
    <string name="customer_name">Nama Nasabah</string>
    <string name="type">Tipe</string>
    <string name="no_identitiy">No. Identitas</string>
    <string name="detailed_account_data">Detail Data Rekenig</string>
    <string name="source_of_funds">Sumber Dana</string>
    <string name="purpose_of_account_opening">Tujuan Pembukaan</string>
    <string name="initial_deposit">Setoran Awal</string>
    <string name="data_mathes">Data Sudah Sesuai</string>
    <string name="process">Proses</string>
    <string name="cancel">Batal</string>
    <string name="individual">Perorangan</string>
    <string name="corporate">Perusahaan</string>
    <string name="itemproductsTypeOrdinary">Biasa</string>
    <string name="itemproductsTypePeriod">Berjangka</string>
    <string name="itemproductsTypeJunior">Junior</string>
    <string name="itemproductsTypeDeposit">Deposito</string>
    <string name="itemtypeAccountRupiah">Rupiah</string>
    <string name="itemTypeAccountDollar">Dollar</string>
    <string name="itemtypeKTP">KTP</string>
    <string name="itemtypePassport">Pasport</string>
    <string name="itemtypesourcefundsPersonal">Pribadi</string>
    <string name="itemtypesourcefundsSalary">Gaji</string>
    <string name="itemtypesourcefundsCompanyResults">Hasil Usaha</string>
    <string name="itemtypeopenaccountdeposit">Simpanan</string>
    <string name="itemtypeopenaccountSalary">Transit Gaji</string>
    <string name="itemtypeopenaccountTransaction">Transaksi</string>
    <string name="a">sd</string>
    <string name="interbankDestinationAccountNumber">No Rekening Tujuan</string>
    <string name="interbankTransferAmount">Jumlah Transfer</string>
    <string name="interbankDetailData">Detail Data Transfer</string>
    <string name="interbankDestination">Tujuan Transfer</string>
    <string name="interbankDestinationBank">Bank Tujuan :</string>
    <string name="interbankAccountNumber">No Rekening :</string>
    <string name="interbankAccountName">Nama Pemilik :</string>
    <string name="interbankFrom">Dari</string>
    <string name="interbankBank">Bank :</string>
    <string name="interbankAmount">Jumlah :</string>
    <string name="interbankDataMatches">Data Sudah Sesuai</string>
    <string name="send">Kirim</string>
    <string name="fellowbankList">Daftar Bank</string>
    <string name="fellowbankDestinationBank">Bank Tujuan</string>
    <string name="phonecreditProvider">Penyedia Layanan</string>
    <string name="phonecreditAmount">Jumlah</string>
    <string name="phonecreditPhoneNumber">Nomor Telepon</string>
    <string name="puurchaseelectrictokenIdCust">ID PEL / No Referensi</string>
    <string name="purchaseelectrictokendetails">Detail Data</string>
    <string name="buy">Beli</string>
    <string name="name">Nama</string>
    <string name="purchaseelectrictokenFarePower">Tarif/Daya</string>
    <string name="balanceYourBalance">Saldo Anda :</string>
    <string name="paymentcreditcardBank">Bank/Penyedia Jasa</string>
    <string name="paymentcreditcardCardNumber">No Kartu</string>
    <string name="postpaidphoneProvider">Penyedia Layanan</string>
    <string name="waterTerritory">Wilayah</string>
    <string name="insertCard">Masukkan Kartu</string>
    <string name="enterPin">Masukkan PIN</string>
    <string name="phoneCreditRegular">Regular</string>
    <string name="phonecreditData">Paket Data</string>
    <string name="phonecreditType">Jenis Pulsa</string>
    <string name="withdrawfragment">Tarik Tunai</string>
    <string name="canNotEmpty">Tidak Boleh Kosong</string>
    <string name="from">Dari</string>
    <string name="to">Kepada</string>
    <string name="transfersuccess">Transfer Berhasil</string>
    <string name="transactionsuccess">Transaksi Berhasil</string>
    <string name="adminbank">Admin Bank</string>
    <string name="detailedinformation">Detail Informasi</string>
    <string name="paymentscreditcard">Pembayaran Kartu Kredit</string>
    <string name="numbercard">Nomor Kartu</string>
    <string name="typecard">Jenis Kartu</string>
    <string name="paymentpostpaidphone">Pembayaran Telepon Pascabayar</string>
    <string name="pay">Bayar</string>
    <string name="paymentinternet">Pemabayaran Internet</string>
    <string name="paymentelectric">Pembayaran Listrik</string>
    <string name="mountyears">Bulan</string>
    <string name="month">Bulan</string>
    <string name="paymentwater">Pembayaran PDAM</string>
    <string name="address">Alamat</string>
    <string name="period">Periode</string>
    <string name="group">Golongan</string>
    <string name="usage">Pemakaian</string>
    <string name="paymentinsurance">Pembayaran Asuransi</string>
    <string name="paymenttelevision">Pembayaran Televisi Prabayar</string>
    <string name="logout">Keluar</string>
    <string name="continuetransaction">Lanjutkan Transaksi ?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
</resources>
