<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.dipesan.miniatm.miniatm.view.payment.PaymentFragment">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <Button
        android:id="@+id/payment_activity_credit_card_button"
        android:textStyle="bold"
        android:textColor="@color/colorTextIcons"
        android:text="@string/credit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ButtonTheme"
        />
    <Button
        android:id="@+id/payment_activity_post_paid_phone_button"
        android:textStyle="bold"
        android:textColor="@color/colorTextIcons"
        android:text="@string/post_paid_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ButtonTheme"
        />
        <Button
            android:id="@+id/payment_activity_electric_button"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcons"
            android:text="@string/electric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme"
            />

    <Button
        android:id="@+id/payment_activity_water_button"
        android:textStyle="bold"
        android:textColor="@color/colorTextIcons"
        android:text="@string/water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ButtonTheme"
        />
    <Button
        android:id="@+id/payment_activity_insurance_button"
        android:textStyle="bold"
        android:textColor="@color/colorTextIcons"
        android:text="@string/insurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ButtonTheme"
        />
    <Button
        android:id="@+id/payment_activity_televesion_button"
        android:textStyle="bold"
        android:textColor="@color/colorTextIcons"
        android:text="@string/television"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ButtonTheme"
        />
        <Button
            android:id="@+id/payment_activity_bpjs_button"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcons"
            android:text="@string/bpjs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme"
            />
</LinearLayout>
</FrameLayout>
