<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:id="@+id/main_activity_logo"
            android:layout_marginLeft="5dp"
            android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/mini_atm_text_view"
            android:textSize="20sp"
            android:textColor="@color/colorTextIcons"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:layout_toRightOf="@+id/main_activity_logo"
            android:text="Mini ATM"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_marginRight="5dp"
            android:id="@+id/main_activity_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_setting_white"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
/>

    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_activity_balance_button"
            android:drawableLeft="@drawable/ic_account_balance"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcons"
            android:text="@string/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme"
            />
        <Button
            android:id="@+id/main_activity_transfer_button"
            android:drawableLeft="@drawable/ic_repeat"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcons"
            android:text="@string/tranfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme"
            />
        <!--<Button-->
            <!--android:id="@+id/main_activity_account_button"-->
            <!--android:drawableLeft="@drawable/ic_description"-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@color/colorTextIcons"-->
            <!--android:text="@string/account"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:theme="@style/ButtonTheme"-->
            <!--/>-->

        <Button
            android:id="@+id/main_activity_purchase_button"
            android:drawableLeft="@drawable/ic_shopping"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcons"
            android:text="@string/purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme"
            />
        <Button
            android:id="@+id/main_activity_payment_button"
            android:drawableLeft="@drawable/ic_payment"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcons"
            android:text="@string/payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme"
            />
        <Button
            android:id="@+id/main_activity_cash_button"
            android:drawableLeft="@drawable/ic_style"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcons"
            android:text="@string/cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme2"
            />

    </LinearLayout>

</LinearLayout>
