<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/login_frame_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
/>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTextIcons"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/login_indonesia_image_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:src="@drawable/ic_indonesia"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <ImageButton
                android:id="@+id/login_english_image_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:src="@drawable/ic_united_kingdom"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/login_logo_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_button"
            android:elevation="4dp"
            android:text="@string/login"
            android:textColor="@color/colorTextIcons"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/login_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/backgroud_button"
            android:elevation="4dp"
            android:text="@string/account"
            android:textColor="@color/colorTextIcons"
            android:textStyle="bold"/>
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:id="@+id/settings_text_view"
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:id="@+id/merchant_text_view"
            android:text="daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

    </LinearLayout>


</LinearLayout>
    </FrameLayout>
